@@ -1,8 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Accerciser
-Comment=Give your application an accessibility workout
-GenericName=Accerciser
+_Name=Accerciser Accesibility Explorer
+_Comment=Give your application an accessibility workout
 Terminal=false
 Type=Application
 Exec=@prefix@/bin/accerciser
@@ -10,5 +9,4 @@ StartupNotify=true
 Categories=Application;Development;
 Icon=accerciser
 X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=lsr
-X-GNOME-Bugzilla-Component=accerciser
+X-GNOME-Bugzilla-Product=accerciser
