@@ -38,7 +38,7 @@ dnl == generate makefiles ==
 AC_OUTPUT([
 Makefile
 accerciser.spec
-accerciser.desktop
+accerciser.desktop.in
 help/Makefile
 icons/Makefile
 pixmaps/Makefile
