@@ -1,5 +1,13 @@
 2007-04-14 Eitan Isaacson  <eitan@ascender.com>
 
+	* Makefile.am: 
+	* accerciser.desktop.in.in:
+	* accerciser.desktop.in:
+	* configure.in: Swapped accerciser.desktop.in for 
+	accerciser.desktop.in.in (bug 429799).
+
+2007-04-14 Eitan Isaacson  <eitan@ascender.com>
+
 	* src/lib/accerciser/accerciser.py: Make bottom and top view names 
 	translatable (bug 429824).
 	* src/lib/accerciser/plugin_manager.py: Make automatically created
